src/styles/global.css
@layer theme, base, components, utilities,;

@import 'tailwindcss/theme.css' layer(theme);
@import 'tailwindcss/utilities.css' layer(utilities);

@plugin '@astrojs/starlight-tailwind';
@custom-variant dark (&:where([data-theme=dark], [data-theme=dark] *));

@theme {
  --text-xxs: 0.625rem;
  --text-xs: 0.75rem;
  --text-sm: 0.875rem;
  --text-base: 1rem;
  --text-lg: 1.125rem;
  --text-xl: 1.25rem;
  --text-2xl: 1.5rem;
  --text-3xl: 1.875rem;
  --text-4xl: 2.25rem;
  --text-5xl: 3rem;
  --text-6xl: 3.75rem;
  --text-7xl: 4.5rem;
  --text-8xl: 6rem;
  --text-9xl: 8rem;

  --font-sans: Inter, sans-serif;
  --font-mono: Source Code Pro, monospace;

  --color-icon-dark: #ffffff;
  --color-icon-light: #000000;

  --color-code-light-bg: #f5f5f5;
  --color-code-light-text: #333333;
  --color-code-light-keyword: #c678dd;
  --color-code-light-string: #98c379;

  --color-code-dark-bg: #2d2d2d;
  --color-code-dark-text: #ffffff;
  --color-code-dark-keyword: #c678dd;
  --color-code-dark-string: #98c379;

  --color-algo-teal-100: #e7faf9;
  --color-algo-teal-200: #d1f4f4;
  --color-algo-teal-300: #b9efee;
  --color-algo-teal-400: #74dfdd;
  --color-algo-teal-500: #45d5d1;
  --color-algo-teal-600: #17cac6;
  --color-algo-teal-700: #5cdad7;

  --color-algo-lavender-100: #e9e9fd;
  --color-algo-lavender-200: #8080f3;
  --color-algo-lavender-300: #4444ed;
  --color-algo-lavender-400: #2d2df1;

  --color-algo-navy: #001324;
}

/*
  The default border color has changed to `currentColor` in Tailwind CSS v4,
  so we've added these compatibility styles to make sure everything still
  looks the same as it did with Tailwind CSS v3.

  If we ever want to remove these styles, we need to add an explicit border
  color utility to any element that depends on these defaults.
*/
@layer base {
  *,
  ::after,
  ::before,
  ::backdrop,
  ::file-selector-button {
    border-color: var(--color-gray-200, currentColor);
  }
}

pre,
code {
  padding: 0.2rem 0.4rem;
  border-radius: 0.2rem;
}

table.reference-table td:first-child,
table.reference-table code {
  @apply text-xs;
  white-space: nowrap;
}

:root[data-theme='dark'] {
  [data-icon] {
    color: var(--color-icon-dark);
  }
  article.card {
    background-color: var(--color-gray-800);
  }
}
:root[data-theme='light'] {
  [data-icon] {
    color: var(--color-icon-light);
  }
  article.card {
    background-color: #edf2ff;
  }
}

/* Sidebar - remove vertical lines */
ul.top-level li {
  border-inline-start: none;
}

/* Font Overrides */
:root {
  --sl-text-2xs: 0.75rem;
  --sl-text-xs: 0.825rem;
  --sl-text-sm: 0.85rem;
  --sl-text-base: 0.875rem;
  --sl-text-lg: 1.125rem;
  --sl-text-xl: 1.25rem;
  --sl-text-2xl: 1.5rem;
  --sl-text-3xl: 1.8125rem;
  --sl-text-4xl: 2.1875rem;
  --sl-text-5xl: 2.625rem;
  --sl-text-6xl: 4rem;
  --sl-text-body: var(--sl-text-base);
  --sl-text-body-sm: var(--sl-text-xs);
  --sl-text-code: var(--sl-text-sm);
  --sl-text-code-sm: var(--sl-text-xs);
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: 'Aeonik', sans-serif;
}

/* Center column overrides for ContentPanel.astro */
:root .sl-container {
  --sl-content-width: auto;
  /* --sl-content-margin-inline: 0; */
  margin-inline: 0;
}

/* Center images and their captions in the content panel  */
.content-panel figure img {
  display: block;
  margin-left: auto;
  margin-right: auto;
  border-radius: 6px;
}

/* Style and center captions */
.content-panel figure figcaption {
  margin-top: 0.5em;
  text-align: center; /* centers the caption text */
  font-style: italic; /* optional style for captions */
  color: #666;
}

/* Hide panel borders */
.sidebar-pane {
  border: none;
}
.right-sidebar {
  border: none;
}
.content-panel + .content-panel {
  border: none;
}
header.header {
  border: none;
}

/* Dark mode colors. */
:root {
  --sl-color-accent-low: #131e4f;
  --sl-color-accent: #a2eae8;
  --sl-color-accent-high: #17cac6;
  --sl-color-white: #dfe1e5;
  --sl-color-gray-1: #e5e7e9;
  --sl-color-gray-2: #ccd0d3;
  --sl-color-gray-3: #66717c;
  --sl-color-gray-4: #334250;
  --sl-color-gray-5: #192a39;
  --sl-color-gray-6: #001324;
  --sl-color-black: #001324;
  --sl-color-banner-bg: #17cac6 !important;
  /* --sl-color-banner-text: #dfe1e5; */
  --sl-color-text-accent: #17cac6;
}
/* Light mode colors. */
:root[data-theme='light'] {
  --sl-color-accent-low: #c7d6ff;
  --sl-color-accent: #2d2df1;
  --sl-color-accent-high: #8080f3;
  --sl-color-white: #282930;
  --sl-color-gray-1: #24272f;
  --sl-color-gray-2: #353841;
  --sl-color-gray-3: #c0c2c7;
  --sl-color-gray-4: #888b96;
  --sl-color-gray-5: #c0c2c7;
  --sl-color-gray-6: #ccd0d3;
  --sl-color-gray-7: #f6f6f6;
  --sl-color-black: #f6f6f6;
  --sl-color-banner-bg: #2d2df1 !important;
  /* --sl-color-banner-text: #dfe1e5; */
}

html:has(.homepage-hero)[data-theme='light'] {
  --sl-color-bg: #ffffff;
  --sl-color-bg-nav: #ffffff;
}

html:has(.homepage-hero)[data-theme='dark'] {
  --sl-color-bg: #001324;
  --sl-color-bg-nav: #001324;
}

html:has(.homepage-hero) {
  main,
  .content-panel {
    padding: 0 !important;
  }

  header {
    @apply py-4! lg:py-[25px]! px-0! h-auto!;
  }

  site-search button[data-open-modal] {
    width: unset !important;
    max-width: unset !important;
    border: unset !important;
    border-radius: unset !important;
    display: block !important;
    background-color: transparent !important;
    padding: unset !important;

    @apply text-algo-lavender-400! dark:text-algo-teal-700! text-[20px]! h-[40px]! md:text-[34px]! md:h-[48px]!;

    .sl-hidden {
      display: none !important;
    }
  }
}

